<resources>
    <string name="app_name">Healthy Recipes</string>
    <string name="txtTitle">Brushetta Recipes</string>
    <string name="Description">Recipe Image</string>
    <string name="btnRecipes">View Recipe</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="txtItem2">6 basil leaves</string>
    <string name="txtItem3">3 garlic cloves, chopped</string>
    <string name="txtItem4">3 TB olive oil</string>
    <string name="txtDirections">Directions</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top French bread slices with mixture.</string>
    <string name="title_activity_recipes">Recipes</string>
</resources>
